# Mahf-Lambea4

./: .clang-tidy  BUILD_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  FINAL_CHECKLIST.md  INSTALLATION.md  LICENSE.txt  README.md  build-setup.bat  build.bat  build.ps1  clang-tidy-baseline.txt  create-exe.ps1  fix-exe.ps1  install.bat  install.ps1  mahf_app.py  mahf_core.c  mahf_service.c
